<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".presentation.LoginFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:fontFamily="@font/outfit_title_bold"
            android:text="@string/lets_log_in"
            android:textColor="@color/primary_text_color"
            android:textSize="36sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_login_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/txt_welcome_back"
            android:textColor="@color/secondary_text_color"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="56dp"
            android:singleLine="true"
            android:background="@drawable/input_form"
            android:fontFamily="@font/outfit_regular"
            android:hint="@string/email_phone_or_username"
            android:paddingVertical="16dp"
            android:paddingStart="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_login_desc"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/edt_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:singleLine="true"
            android:inputType="textPassword"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="12dp"
            android:background="@drawable/input_form"
            android:fontFamily="@font/outfit_regular"
            android:hint="@string/password"
            android:paddingVertical="16dp"
            android:paddingStart="16dp"
            android:textSize="16sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_username"
            tools:ignore="RtlSymmetry" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_forgot_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="40dp"
            android:fontFamily="@font/outfit_regular"
            android:text="@string/txt_forgot_password"
            android:textColor="@color/text_color"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edt_password" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_sign_in"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="12dp"
            android:backgroundTint="@color/primary_color"
            android:fontFamily="@font/outfit_medium"
            android:paddingHorizontal="12dp"
            android:text="Sign in"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@id/separate_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_in">

            <View
                android:id="@+id/view_separate_line_01"
                android:layout_width="148dp"
                android:layout_height="1dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/separate_line" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_or"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/outfit_medium"
                android:text="@string/or"
                android:textColor="@color/black"
                android:textSize="18sp" />

            <View
                android:id="@+id/view_separate_line_02"
                android:layout_width="148dp"
                android:layout_height="1dp"
                android:layout_marginVertical="28dp"
                android:layout_marginTop="28dp"
                android:background="@drawable/separate_line" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/social_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/separate_container">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_google"
                android:layout_width="23dp"
                android:layout_height="23dp"
                android:background="@drawable/ic_google" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_facebook"
                android:layout_width="18dp"
                android:layout_height="25.99dp"
                android:layout_marginHorizontal="32dp"
                android:background="@drawable/ic_facebook" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_apple"
                android:layout_width="23dp"
                android:layout_height="28.25dp"
                android:background="@drawable/ic_mac" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/register_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center_horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/social_container">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_question"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/outfit_regular"
                android:textColor="@color/secondary_text_color"
                android:text="@string/txt_question_register" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_register_now"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:fontFamily="@font/outfit_title_bold"
                android:text="@string/register_now"
                android:textColor="@color/light_red" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>