<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary_color"
        tools:context=".presentation.WelcomeFragment01">

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/vp_on_boarding"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:background="@drawable/view_pager_background"
            app:layout_constraintBottom_toTopOf="@+id/view_center_of_next"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/indicators_container"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="20dp"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/txt_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="20dp"
            android:text="@string/skip"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:background="@drawable/ic_outer_background"
            app:layout_constraintBottom_toBottomOf="@+id/img_next"
            app:layout_constraintEnd_toEndOf="@id/img_next"
            app:layout_constraintStart_toStartOf="@id/img_next"
            app:layout_constraintTop_toTopOf="@+id/img_next" />

        <View
            android:id="@+id/view_center_of_next"
            android:layout_width="1dp"
            android:layout_height="1dp"
            app:layout_constraintBottom_toBottomOf="@+id/img_next"
            app:layout_constraintEnd_toEndOf="@id/img_next"
            app:layout_constraintStart_toStartOf="@id/img_next"
            app:layout_constraintTop_toTopOf="@+id/img_next" />

        <ImageView
            android:id="@+id/img_next"
            android:layout_width="44dp"
            android:layout_height="44dp"
            android:layout_marginBottom="48dp"
            android:background="@drawable/icon_background"
            android:src="@drawable/ic_right"
            app:layout_constraintBottom_toTopOf="@+id/container_buttons"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:tint="@color/white" />


        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/container_buttons"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="48dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_login"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@drawable/btn_login"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:stateListAnimator="@null"
                android:text="@string/login"
                android:textAllCaps="false"
                android:textColor="@color/light_blue"
                android:textSize="20sp"
                android:textStyle="bold" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_signup"
                android:layout_width="wrap_content"
                android:layout_height="48dp"
                android:background="@drawable/btn_signup"
                android:paddingStart="40dp"
                android:paddingEnd="40dp"
                android:stateListAnimator="@null"
                android:text="@string/sign_up"
                android:textAllCaps="false"
                android:textColor="@color/light_gray_2"
                android:textSize="20sp"
                android:textStyle="bold" />
        </androidx.appcompat.widget.LinearLayoutCompat>


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>